# pet_todo

./: .dockerignore  .env  .gitattributes  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 58d2e7e86db0_create_tasks_table.py  8a03573c1f61_create_tasks_table.py  a23cd5a29f2b_create_tasks_table.py  c8d3141ce7d1_add_owner_to_task.py
api/: dependenciens.py
api/routers/: auth.py  tasks.py  user.py
core/: config.py  logger.py  security.py
db/: session.py
exeptions/: base.py  handlers.py  task.py
models/: task.py  user.py
repositories/: task_repository.py  user_repository.py
schemas/: enums.py  task.py  user.py
services/: auth_services.py  task_service.py  user_service.py
tests/: conftest.py
tests/services/: test_auth_service.py  test_task_service.py  test_user_service.py
