[project]
name = "pet-base"
version = "0.1.0"
description = "Task Manager API"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",

    "pydantic>=2.10",
    "pydantic-settings>=2.6",

    "python-dotenv>=1.0",

    "PyJWT>=2.9",

    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.2",

    "python-multipart>=0.0.20",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",

    "ruff>=0.8",

    "black>=24.10",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]